--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
       font-weight: bold;
       border: none;
       border-radius: 8px;
-      background: #c62828;
+      background: #f00606;
       color: #fff;
       cursor: pointer;
       transition: 0.2s;
@@ -51,12 +51,12 @@
       justify-content: space-between;
       margin: 5px 0;
     }
-    .total {
-      font-size: 20px;
-      font-weight: bold;
-      margin-top: 10px;
-      color: #2e7d32;
-    }
+.total {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 10px;
+  color: #2e7d32;
+}
     .reset {
       background: #444;
       margin-top: 15px;
@@ -82,7 +82,7 @@
   </div>
 
   <script>
-    // Beispiel-Produkte (hier kannst du alle Burger, Drinks, Desserts eintragen)
+    // Produkte
     const products = [
       { name: "Cheeseburger", price: 5.00 },
       { name: "Double Burger", price: 7.50 },
@@ -108,7 +108,13 @@
 
     function addToCart(index) {
       const product = products[index];
-      cart.push(product);
+      // prüfen ob Produkt schon im Warenkorb existiert
+      const existing = cart.find(item => item.name === product.name);
+      if (existing) {
+        existing.qty += 1; // Anzahl erhöhen
+      } else {
+        cart.push({ ...product, qty: 1 }); // neu hinzufügen
+      }
       renderCart();
     }
 
@@ -119,9 +125,9 @@
       cart.forEach((item) => {
         const div = document.createElement("div");
         div.className = "cart-item";
-        div.innerHTML = `<span>${item.name}</span><span>$${item.price.toFixed(2)}</span>`;
+        div.innerHTML = `<span>${item.qty}x ${item.name}</span><span>$${(item.price * item.qty).toFixed(2)}</span>`;
         cartContainer.appendChild(div);
-        total += item.price;
+        total += item.price * item.qty;
       });
       document.getElementById("totalPrice").innerText = total.toFixed(2);
     }
@@ -135,3 +141,5 @@
   </script>
 </body>
 </html>
+
+
