--- a/index2.html
+++ b/index2.html
@@ -84,14 +84,23 @@
   <script>
     // Produkte
     const products = [
-      { name: "Cheeseburger", price: 5.00 },
-      { name: "Double Burger", price: 7.50 },
-      { name: "Veggie Burger", price: 6.00 },
-      { name: "Cola", price: 2.00 },
-      { name: "Milkshake", price: 3.50 },
-      { name: "Pommes", price: 2.50 },
-      { name: "Donut", price: 1.50 },
-      { name: "Lavacake", price: 1.50 }
+      { name: "Classic Shot Burger", price: 85.00 },
+      { name: "Double Trouble Burger", price: 85.00 },
+      { name: "Spicy Shot Burger", price: 85.00 },
+      { name: "Veggi Delight Burger", price: 85.00 },
+      { name: "Big Boss Burger", price: 85.00 },
+      { name: "Sweet Donut", price: 85.00 },
+      { name: "Choco Lava Muffin", price: 85.00 },
+      { name: "Vanila Soft Ice", price: 85.00 },
+      { name: "Strawberry Sundae", price: 85.00 },
+      { name: "Cookie Shot", price: 85.00 },
+      { name: "Cola shot", price: 90.00 },
+      { name: "Cherry Fizz", price: 90.00 },
+      { name: "Vanilla Shake", price: 90.00 },
+      { name: "Strawberry Blast", price: 90.00 },
+      { name: "Iced Coffee Shot", price: 90.00 },
+      { name: "Burger Shot Menü", price: 150.00 },
+      { name: "Big Boss Menü", price: 185.00 }
     ];
 
     let cart = [];
@@ -141,5 +150,6 @@
   </script>
 </body>
 </html>
+
 
 
