--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
+<head>q
   <meta charset="UTF-8">
   <title>Burger Shot Kassenrechner</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #fce4ec;
+      background: #460006;
       margin: 0;
       padding: 20px;
     }
@@ -17,7 +17,7 @@
     .container {
       max-width: 900px;
       margin: auto;
-      background: #fff;
+      background: #99914d;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
@@ -34,35 +34,48 @@
       font-weight: bold;
       border: none;
       border-radius: 8px;
-      background: #f00606;
       color: #fff;
       cursor: pointer;
       transition: 0.2s;
     }
     button:hover {
-      background: #e53935;
+      filter: brightness(0.9);
     }
     .cart {
       border-top: 2px solid #ddd;
       padding-top: 15px;
+      margin-bottom: 20px;
     }
     .cart-item {
       display: flex;
       justify-content: space-between;
       margin: 5px 0;
     }
-.total {
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 10px;
-  color: #2e7d32;
-}
+    .total {
+      font-size: 20px;
+      font-weight: bold;
+      margin-top: 10px;
+      color: #2e7d32;
+    }
     .reset {
       background: #444;
       margin-top: 15px;
     }
     .reset:hover {
       background: #000;
+    }
+    /* Tagesumsatz Box */
+    .daily-sales {
+      margin-top: 20px;
+      padding: 15px;
+      border: 3px solid #c62828;
+      border-radius: 10px;
+      background: #fff5f5;
+      text-align: center;
+      font-size: 22px;
+      font-weight: bold;
+      color: #c62828;
+      box-shadow: 0px 2px 8px rgba(0,0,0,0.1);
     }
   </style>
 </head>
@@ -77,7 +90,12 @@
       <h2>🛒 Warenkorb</h2>
       <div id="cartItems"></div>
       <div class="total">Gesamt: $<span id="totalPrice">0.00</span></div>
+      <button class="reset" onclick="finishPurchase()">✅ Verkauf abschließen</button>
       <button class="reset" onclick="resetCart()">🗑 Warenkorb leeren</button>
+    </div>
+
+    <div class="daily-sales">
+      📊 Tagesumsatz: $<span id="dailySales">0.00</span>
     </div>
   </div>
 
@@ -104,12 +122,30 @@
     ];
 
     let cart = [];
+    let dailySales = 0;
+
+    // Farben für Reihen (wiederholen sich bei Bedarf)
+    const rowColors = [
+      "#f00606", // rot
+      "#1565c0", // blau
+      "#2e7d32", // grün
+      "#f57c00", // orange
+      "#6a1b9a", // lila
+      "#00897b"  // türkis
+    ];
 
     function renderProducts() {
       const container = document.getElementById("productButtons");
+      const itemsPerRow = 5; // Anzahl Spalten
+
       products.forEach((p, index) => {
         const btn = document.createElement("button");
         btn.innerText = `${p.name} ($${p.price.toFixed(2)})`;
+
+        // Berechnen welche Reihe (Zeile)
+        const row = Math.floor(index / itemsPerRow);
+        btn.style.background = rowColors[row % rowColors.length];
+
         btn.onclick = () => addToCart(index);
         container.appendChild(btn);
       });
@@ -117,12 +153,11 @@
 
     function addToCart(index) {
       const product = products[index];
-      // prüfen ob Produkt schon im Warenkorb existiert
       const existing = cart.find(item => item.name === product.name);
       if (existing) {
-        existing.qty += 1; // Anzahl erhöhen
+        existing.qty += 1;
       } else {
-        cart.push({ ...product, qty: 1 }); // neu hinzufügen
+        cart.push({ ...product, qty: 1 });
       }
       renderCart();
     }
@@ -146,10 +181,18 @@
       renderCart();
     }
 
+    function finishPurchase() {
+      let total = cart.reduce((sum, item) => sum + item.price * item.qty, 0);
+      dailySales += total;
+      document.getElementById("dailySales").innerText = dailySales.toFixed(2);
+      resetCart();
+    }
+
     renderProducts();
   </script>
 </body>
 </html>
+
 
 
 
