--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>q
+<head>made by Zlatan De La Kush
   <meta charset="UTF-8">
   <title>Burger Shot Kassenrechner</title>
   <style>
@@ -192,6 +192,7 @@
   </script>
 </body>
 </html>
+
 
 
 
