--- a/index2.html
+++ b/index2.html
@@ -81,7 +81,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🍔 Burger Shot Kassenrechner</h1>
+    <h1>🍔 Burger Shot Kassenrechner 🍔</h1>
 
     <h2>Produkte</h2>
     <div class="buttons" id="productButtons"></div>
@@ -192,6 +192,7 @@
   </script>
 </body>
 </html>
+
 
 
 
