--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
     .container {
       max-width: 900px;
       margin: auto;
-      background: #464119;
+      background: #756c26q;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
@@ -112,7 +112,7 @@
       { name: "Vanila Soft Ice", price: 85.00 },
       { name: "Strawberry Sundae", price: 85.00 },
       { name: "Cookie Shot", price: 85.00 },
-      { name: "Cola shot", price: 75.00 },
+      { name: "Cola Shot", price: 75.00 },
       { name: "Cherry Fizz", price: 75.00 },
       { name: "Vanilla Shake", price: 75.00 },
       { name: "Strawberry Blast", price: 75.00 },
@@ -192,6 +192,7 @@
   </script>
 </body>
 </html>
+
 
 
 
