--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
     .container {
       max-width: 900px;
       margin: auto;
-      background: #756c26q;
+      background: #756c26;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
@@ -192,6 +192,7 @@
   </script>
 </body>
 </html>
+
 
 
 
