--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
       padding: 20px;
     }
     h1 {
-      color: #c62828;
+      color: b10000;
       text-align: center;
     }
     .container {
@@ -55,7 +55,7 @@
       font-size: 20px;
       font-weight: bold;
       margin-top: 10px;
-      color: #2e7d32;
+      color: #7e0101;
     }
     .reset {
       background: #444;
@@ -192,6 +192,7 @@
   </script>
 </body>
 </html>
+
 
 
 
