--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
       padding: 20px;
     }
     h1 {
-      color: b10000;
+      color: #b10000;
       text-align: center;
     }
     .container {
@@ -118,7 +118,7 @@
       { name: "Strawberry Blast", price: 75.00 },
       { name: "Iced Coffee Shot", price: 75.00 },
       { name: "Burger Shot Menü", price: 155.00 },
-      { name: "Big Boss Menü", price: 165.00 }
+      { name: "Big Boss Menü", price: 240.00 }
     ];
 
     let cart = [];
@@ -192,6 +192,7 @@
   </script>
 </body>
 </html>
+
 
 
 
