--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>made by Zlatan De La Kush
   <meta charset="UTF-8">
-  <title>Burger Shot Kassenrechner</title>
+  <title>Burger 66 Kassenrechner</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -102,21 +102,21 @@
   <script>
     // Produkte
     const products = [
-      { name: "Classic Shot Burger", price: 85.00 },
+      { name: "Classic 66 Burger", price: 85.00 },
       { name: "Double Trouble Burger", price: 85.00 },
-      { name: "Spicy Shot Burger", price: 85.00 },
+      { name: "Spicy 66 Burger", price: 85.00 },
       { name: "Veggi Delight Burger", price: 85.00 },
       { name: "Big Boss Burger", price: 85.00 },
       { name: "Sweet Donut", price: 85.00 },
       { name: "Choco Lava Muffin", price: 85.00 },
       { name: "Vanila Soft Ice", price: 85.00 },
       { name: "Strawberry Sundae", price: 85.00 },
-      { name: "Cookie Shot", price: 85.00 },
+      { name: "Panecake 66", price: 85.00 },
       { name: "Cola Shot", price: 75.00 },
       { name: "Cherry Fizz", price: 75.00 },
       { name: "Vanilla Shake", price: 75.00 },
       { name: "Strawberry Blast", price: 75.00 },
-      { name: "Iced Coffee Shot", price: 75.00 },
+      { name: "Iced Coffee 66", price: 75.00 },
       { name: "Burger Shot Menü", price: 155.00 },
       { name: "Big Boss Menü", price: 240.00 }
     ];
@@ -192,6 +192,7 @@
   </script>
 </body>
 </html>
+
 
 
 
