--- a/index2.html
+++ b/index2.html
@@ -6,18 +6,19 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #460006;
+      background: #000000;
       margin: 0;
       padding: 20px;
+      color: #ffffff;
     }
     h1 {
-      color: #b10000;
+      color: #f30505;
       text-align: center;
     }
     .container {
       max-width: 900px;
       margin: auto;
-      background: #756c26;
+      background: #09005e;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0px 2px 8px rgba(0,0,0,0.2);
@@ -81,7 +82,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🍔 Burger Shot Kassenrechner 🍔</h1>
+    <h1>🍔 Burger 66 Kassenrechner 🍔</h1>
 
     <h2>Produkte</h2>
     <div class="buttons" id="productButtons"></div>
@@ -117,8 +118,8 @@
       { name: "Vanilla Shake", price: 75.00 },
       { name: "Strawberry Blast", price: 75.00 },
       { name: "Iced Coffee 66", price: 75.00 },
-      { name: "Burger Shot Menü", price: 155.00 },
-      { name: "Big Boss Menü", price: 240.00 }
+      { name: "Burger 66 Menü", price: 155.00 },
+      { name: "66 Big Boss Menü", price: 240.00 }
     ];
 
     let cart = [];
@@ -192,6 +193,7 @@
   </script>
 </body>
 </html>
+
 
 
 
