--- a/index2.html
+++ b/index2.html
@@ -118,6 +118,11 @@
       { name: "Vanilla Shake", price: 75.00 },
       { name: "Strawberry Blast", price: 75.00 },
       { name: "Iced Coffee 66", price: 75.00 },
+      { name: "Wiskey Cola", price: 110.00 },
+      { name: "Mojito 66", price: 110.00 },
+      { name: "Tequilla Sunrise", price: 110.00 },
+      { name: "Beer 66 SPECIAL", price: 110.00 },
+      { name: "Gin Tonic", price: 110.00 },
       { name: "Burger 66 Menü", price: 155.00 },
       { name: "66 Big Boss Menü", price: 240.00 }
     ];
@@ -193,6 +198,7 @@
   </script>
 </body>
 </html>
+
 
 
 
