--- a/index2.html
+++ b/index2.html
@@ -119,7 +119,7 @@
       { name: "Strawberry Blast", price: 75.00 },
       { name: "Iced Coffee 66", price: 75.00 },
       { name: "Wiskey Cola", price: 110.00 },
-      { name: "Mojito 66", price: 110.00 },
+      { name: "Mojito", price: 110.00 },
       { name: "Tequilla Sunrise", price: 110.00 },
       { name: "Beer 66 SPECIAL", price: 110.00 },
       { name: "Gin Tonic", price: 110.00 },
@@ -198,6 +198,7 @@
   </script>
 </body>
 </html>
+
 
 
 
