--- a/index2.html
+++ b/index2.html
@@ -113,7 +113,7 @@
       { name: "Vanila Soft Ice", price: 85.00 },
       { name: "Strawberry Sundae", price: 85.00 },
       { name: "Panecake 66", price: 85.00 },
-      { name: "Cola Shot", price: 75.00 },
+      { name: "Cola 66", price: 75.00 },
       { name: "Cherry Fizz", price: 75.00 },
       { name: "Vanilla Shake", price: 75.00 },
       { name: "Strawberry Blast", price: 75.00 },
@@ -198,6 +198,7 @@
   </script>
 </body>
 </html>
+
 
 
 
