--- a/index2.html
+++ b/index2.html
@@ -62,6 +62,10 @@
       background: #444;
       margin-top: 15px;
     }
+    .reset2 {
+      background: #65a05e;
+      margin-top: 15px;
+    }
     .reset:hover {
       background: #000;
     }
@@ -91,7 +95,7 @@
       <h2>🛒 Warenkorb</h2>
       <div id="cartItems"></div>
       <div class="total">Gesamt: $<span id="totalPrice">0.00</span></div>
-      <button class="reset" onclick="finishPurchase()">✅ Verkauf abschließen</button>
+      <button class="reset2" onclick="finishPurchase()">✅ Verkauf abschließen</button>
       <button class="reset" onclick="resetCart()">🗑 Warenkorb leeren</button>
     </div>
 
@@ -198,6 +202,7 @@
   </script>
 </body>
 </html>
+
 
 
 
