--- a/index2.html
+++ b/index2.html
@@ -75,7 +75,7 @@
       padding: 15px;
       border: 3px solid #c62828;
       border-radius: 10px;
-      background: #fff5f5;
+      background: #eca6a6;
       text-align: center;
       font-size: 22px;
       font-weight: bold;
@@ -202,6 +202,7 @@
   </script>
 </body>
 </html>
+
 
 
 
