--- a/index2.html
+++ b/index2.html
@@ -107,26 +107,26 @@
   <script>
     // Produkte
     const products = [
-      { name: "Classic 66 Burger", price: 85.00 },
-      { name: "Double Trouble Burger", price: 85.00 },
-      { name: "Spicy 66 Burger", price: 85.00 },
-      { name: "Veggi Delight Burger", price: 85.00 },
-      { name: "Big Boss Burger", price: 85.00 },
-      { name: "Sweet Donut", price: 85.00 },
-      { name: "Choco Lava Muffin", price: 85.00 },
-      { name: "Vanila Soft Ice", price: 85.00 },
-      { name: "Strawberry Sundae", price: 85.00 },
-      { name: "Panecake 66", price: 85.00 },
-      { name: "Cola 66     ", price: 75.00 },
-      { name: "Cherry Fizz", price: 75.00 },
-      { name: "Vanilla Shake", price: 75.00 },
-      { name: "Strawberry Blast", price: 75.00 },
-      { name: "Iced Coffee 66", price: 75.00 },
-      { name: "Wiskey Cola", price: 110.00 },
-      { name: "Mojito        ", price: 110.00 },
-      { name: "Tequilla Sunrise", price: 110.00 },
-      { name: "Beer 66 SPECIAL", price: 110.00 },
-      { name: "Gin Tonic", price: 110.00 },
+      { name: "Classic 66 Burger", price: 100.00 },
+      { name: "Double Trouble Burger", price: 100.00 },
+      { name: "Spicy 66 Burger", price: 100.00 },
+      { name: "Veggi Delight Burger", price: 100.00 },
+      { name: "Big Boss Burger", price: 100.00 },
+      { name: "Sweet Donut", price: 100.00 },
+      { name: "Choco Lava Muffin", price: 100.00 },
+      { name: "Vanila Soft Ice", price: 100.00 },
+      { name: "Strawberry Sundae", price: 100.00 },
+      { name: "Panecake 66", price: 100.00 },
+      { name: "Cola 66     ", price: 100.00 },
+      { name: "Cherry Fizz", price: 100.00 },
+      { name: "Vanilla Shake", price: 100.00 },
+      { name: "Cherry Blast", price: 100.00 },
+      { name: "Iced Coffee 66", price: 100.00 },
+      { name: "Wiskey Cola", price: 150.00 },
+      { name: "Mojito        ", price: 150.00 },
+      { name: "Tequilla Sunrise", price: 150.00 },
+      { name: "Beer 66 SPECIAL", price: 120.00 },
+      { name: "Gin Tonic", price: 150.00 },
       { name: "Burger 66 Menü", price: 155.00 },
       { name: "66 Big Boss Menü", price: 240.00 }
     ];
@@ -202,6 +202,7 @@
   </script>
 </body>
 </html>
+
 
 
 
